# LearnFFMPEG

./: CMakeLists.txt  README.md  main.cpp
ffmpeg/include/libavutil/: error.h  ffversion.h
ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libswscale.pc
